crates/poly-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_angular.snap
---
source: crates/poly-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"app.component.html\", Language::Angular,\nKNOWN_UNFORMATTED_ANGULAR,)"
---
<div class="container">
  <p [class]="active ? 'on' : 'off'">Hello</p>
  <button (click)="doIt()">Click</button>
</div>
