crates/poly-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_astro.snap
---
source: crates/poly-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"index.astro\", Language::Astro, KNOWN_UNFORMATTED_ASTRO)"
---
---
const title = "Hello";
---
<html>
  <head><title>{title}</title></head>
  <body><p class="text">Welcome</p></body>
</html>
