crates/poly-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_html.snap
---
source: crates/poly-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"page.html\", Language::Html, KNOWN_UNFORMATTED_HTML)"
---
<html>
  <head><title>Hi</title></head>
  <body>
    <p class="a" id="b">Hello world</p>
    <div><span>x</span></div>
  </body>
</html>
