crates/poly-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_jinja.snap
---
source: crates/poly-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"base.html.jinja2\", Language::Jinja, KNOWN_UNFORMATTED_JINJA)"
---
<html>
  <head><title>{{ page_title }}</title></head>
  <body>
    <h1>{{ heading }}</h1>
    <p class="intro">{{ body }}</p>
  </body>
</html>
