crates/poly-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_mustache.snap
---
source: crates/poly-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"list.html.mustache\", Language::Mustache,\nKNOWN_UNFORMATTED_MUSTACHE)"
---
<html>
  <head><title>{{title}}</title></head>
  <body><p class="greeting">{{message}}</p></body>
</html>
