crates/poly-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_svelte.snap
---
source: crates/poly-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"App.svelte\", Language::Svelte, KNOWN_UNFORMATTED_SVELTE)"
---
<script>
let name = "world";
</script><main>
  <h1 class="title">Hello {name}</h1>
  <button on:click={go}>Go</button>
</main>
