crates/poly-core/tests/snapshots/markup_fmt_fixtures__markup_fmt_known_unformatted_vento.snap
---
source: crates/poly-core/tests/markup_fmt_fixtures.rs
expression: "format_to_string(\"layout.html.vto\", Language::Vento, KNOWN_UNFORMATTED_VENTO)"
---
<html>
  <body>
    <p>{{ title }}</p>
    <ul>{{ for item of items }}<li>{{ item }}</li>{{ /for }}</ul>
  </body>
</html>
